Week 8 lab worksheet

--- a/assignments.html
+++ b/assignments.html
@@ -1114,7 +1114,7 @@ in the above html/doc/pdf.</li>
 <div id="assignment-1" class="section level2">
 <h2>3.1. Assignment 1</h2>
 <p>Categorical data 1: data structure and descriptives</p>
-<p>Objectives of this assignment</p>
+<p>Objectives of this assignment:</p>
 <ul>
 <li><p>Describe and summarize categorical data</p></li>
 <li><p>Create visualizations of categorical data</p></li>
@@ -1128,7 +1128,7 @@ in the above html/doc/pdf.</li>
 <div id="assignment-2" class="section level2">
 <h2>3.2. Assignment 2</h2>
 <p>Categorical data 2: chi-square analysis</p>
-<p>Objectives of this assignment</p>
+<p>Objectives of this assignment:</p>
 <ul>
 <li><p>Describe relationships between categorical variables</p></li>
 <li><p>Calculate an index of the strength of the relationship between
@@ -1150,7 +1150,7 @@ and a statistical inference from a chi-squared statistic</p></li>
 <h2>3.3. Assignment 3</h2>
 <p>Continuous data 1: summarizing continuous data and <span
 class="math inline">\(t\)</span>-tests</p>
-<p>Objectives of this assignment</p>
+<p>Objectives of this assignment:</p>
 <ul>
 <li><p>Describe and summarize continuous data</p></li>
 <li><p>Create visualizations of continuous data</p></li>
@@ -1166,6 +1166,15 @@ class="math inline">\(t\)</span>-test</p></li>
 <div id="assignment-4" class="section level2">
 <h2>3.4. Assignment 4</h2>
 <p>Continuous data 2: intro to bivariate regression</p>
+<p>Objectives of this assignment:</p>
+<ul>
+<li><p>Create bivariate scatterplots and bivariate regression
+estimates</p></li>
+<li><p>State null hypothesis and interpret results of linear regression
+test of bivariate continuous relationship</p></li>
+<li><p>Test (some) assumptions of bivariate regression
+estimation</p></li>
+</ul>
 <p>Deadline: November 29, 11:59pm</p>
 <p>Download: <a href="./assignments/assignment04.html">html file</a> |
 <a href="./data/cont.csv">cont.csv dataset</a></p>
