--- a/schedule.html
+++ b/schedule.html
@@ -1321,6 +1321,7 @@ href="./slides/EDUC641_14_regression.pdf">pdf</a></li>
 <li>Data: <a
 href="./data/life_expectancy.csv">life_expectancy.csv</a></li>
 <li>R code: <a href="./slides/EDUC641_13_code.R">R script</a></li>
+<li>Lab activities: <a href="./labs/Lab8.docx">Week 8 Lab</a></li>
 </ul>
 <p>Assignment 4:</p>
 <ul>
