--- a/assignments.html
+++ b/assignments.html
@@ -951,8 +951,8 @@ Lectures
 <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
 <a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
 <a href="./slides/EDUC641_14_regression.html">14. Bivariate regression I</a>
-<span class="nav-dropdown-header">15. Bivariate regression II</span>
-<span class="nav-dropdown-header">16. Bivariate regression III</span>
+<a href="./slides/EDUC641_15_regression2.html">15. Bivariate regression II</a>
+<a href="./slides/EDUC641_15_regression2.html">16. Bivariate regression III</a>
 <span class="nav-dropdown-header">17. NHST critiques</span>
 <span class="nav-dropdown-header">18. NHST critiques and summary</span>
 </div>
@@ -1038,8 +1038,12 @@ Lectures
     <li>
       <a href="./slides/EDUC641_14_regression.html">14. Bivariate regression I</a>
     </li>
-    <li class="dropdown-header">15. Bivariate regression II</li>
-    <li class="dropdown-header">16. Bivariate regression III</li>
+    <li>
+      <a href="./slides/EDUC641_15_regression2.html">15. Bivariate regression II</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_15_regression2.html">16. Bivariate regression III</a>
+    </li>
     <li class="dropdown-header">17. NHST critiques</li>
     <li class="dropdown-header">18. NHST critiques and summary</li>
   </ul>
@@ -1175,7 +1179,7 @@ test of bivariate continuous relationship</p></li>
 <li><p>Test (some) assumptions of bivariate regression
 estimation</p></li>
 </ul>
-<p>Deadline: November 29, 11:59pm</p>
+<p>Deadline: November 27, 11:59pm</p>
 <p>Download: <a href="./assignments/assignment04.html">html file</a> |
 <a href="./data/cont.csv">cont.csv dataset</a></p>
 <p>Key:
