--- a/schedule.html
+++ b/schedule.html
@@ -951,8 +951,8 @@ Lectures
 <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
 <a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
 <a href="./slides/EDUC641_14_regression.html">14. Bivariate regression I</a>
-<span class="nav-dropdown-header">15. Bivariate regression II</span>
-<span class="nav-dropdown-header">16. Bivariate regression III</span>
+<a href="./slides/EDUC641_15_regression2.html">15. Bivariate regression II</a>
+<a href="./slides/EDUC641_15_regression2.html">16. Bivariate regression III</a>
 <span class="nav-dropdown-header">17. NHST critiques</span>
 <span class="nav-dropdown-header">18. NHST critiques and summary</span>
 </div>
@@ -1038,8 +1038,12 @@ Lectures
     <li>
       <a href="./slides/EDUC641_14_regression.html">14. Bivariate regression I</a>
     </li>
-    <li class="dropdown-header">15. Bivariate regression II</li>
-    <li class="dropdown-header">16. Bivariate regression III</li>
+    <li>
+      <a href="./slides/EDUC641_15_regression2.html">15. Bivariate regression II</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_15_regression2.html">16. Bivariate regression III</a>
+    </li>
     <li class="dropdown-header">17. NHST critiques</li>
     <li class="dropdown-header">18. NHST critiques and summary</li>
   </ul>
@@ -1313,8 +1317,9 @@ conference)</strong></li>
 <li>Class 14 (11/14) slides: <a
 href="./slides/EDUC641_14_regression.html">html</a> | <a
 href="./slides/EDUC641_14_regression.pdf">pdf</a></li>
-<li>Class 15-16 slides (11/16 &amp; 11/21):
-<!-- [html](./slides/EDUC641_16_residuals.html) | [pdf](./slides/EDUC641_16_residuals.pdf) -->
+<li>Class 15-16 slides (11/16 &amp; 11/21): <a
+href="./slides/EDUC641_15_regression2.html">html</a> | <a
+href="./slides/EDUC641_15_regression2.pdf">pdf</a>
 <ul>
 <li><strong>No class on 11/23 (university holiday)</strong></li>
 </ul></li>
