post final assignment

--- a/assignments.html
+++ b/assignments.html
@@ -1188,9 +1188,10 @@ estimation</p></li>
 <div id="final" class="section level2">
 <h2>3.5. Final</h2>
 <p>Final assignment</p>
-<p>Deadline: December 7, 11:59pm <!--
-Download: 
-[html file](./assignments/assignment05.html) | [ah01.csv dataset](./data/ah01.csv); [ah02.csv dataset](./data/ah02.csv)  --></p>
+<p>Deadline: December 6, 11:59pm</p>
+<p>Download: <a href="./assignments/assignment05.html">html file</a> |
+<a href="./data/ah01.csv">ah01.csv dataset</a>; <a
+href="./data/ah02.csv">ah02.csv dataset</a></p>
 <p>Key:</p>
 </div>
 </div>
