fix broken link

--- a/assignments/assignment05.html
+++ b/assignments/assignment05.html
@@ -413,7 +413,7 @@ higher than peers without a mentor (roughly the difference between a C+
 and a B-), and they complete almost a full year of additional
 education.</p>
 <p><em>If you have trouble accessing the full article at the above link,
-try this <a href="./assignments/Kraft%20et%20al%202023.pdf">direct
+try this <a href="./Kraft%20et%20al%202023.pdf">direct
 download</a>.</em></p>
 </div>
 <div id="research-questions" class="section level3">
