--- a/schedule.html
+++ b/schedule.html
@@ -953,8 +953,8 @@ Lectures
 <a href="./slides/EDUC641_14_regression.html">14. Bivariate regression I</a>
 <a href="./slides/EDUC641_15_regression2.html">15. Bivariate regression II</a>
 <a href="./slides/EDUC641_15_regression2.html">16. Bivariate regression III</a>
-<span class="nav-dropdown-header">17. NHST critiques</span>
-<span class="nav-dropdown-header">18. NHST critiques and summary</span>
+<a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
+<a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
 </div>
 </div>
 </div>
@@ -1044,8 +1044,12 @@ Lectures
     <li>
       <a href="./slides/EDUC641_15_regression2.html">16. Bivariate regression III</a>
     </li>
-    <li class="dropdown-header">17. NHST critiques</li>
-    <li class="dropdown-header">18. NHST critiques and summary</li>
+    <li>
+      <a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
+    </li>
   </ul>
 </li>
       </ul>
@@ -1345,18 +1349,20 @@ href="./labs/Lab9.docx">Week 9 Lab</a></li>
 testing framework</p></li>
 <li><p>Describe strategies to improve replicability and generalizability
 of quantitative research</p></li>
-<li><p>Classes 17-18 (11/28 &amp; 11/30):
-<!-- [html](./slides/EDUC641_17_critiques.html) | [pdf](./slides/EDUC641_17_critiques.pdf)
-
-- Data management cheat sheet: [html](data_management.html) --></p></li>
+<li><p>Classes 17-18 (11/28 &amp; 11/30): <a
+href="./slides/EDUC641_17_critiques.html">html</a> | <a
+href="./slides/EDUC641_17_critiques.pdf">pdf</a></p></li>
+<li><p>Data management cheat sheet: <a
+href="data_management.html">html</a></p></li>
 </ul>
 </div>
 <div id="final-assignment" class="section level2">
 <h2>Final Assignment</h2>
 <ul>
-<li>Due December 6 at 11:59pm <!--
-- [html file](./assignments/assignment05.html)
-- [ah01.csv](./data/ah01.csv) | [ah02.csv](./data/ah02.csv) --></li>
+<li>Due December 6 at 11:59pm</li>
+<li><a href="./assignments/assignment05.html">html file</a></li>
+<li><a href="./data/ah01.csv">ah01.csv</a> | <a
+href="./data/ah02.csv">ah02.csv</a></li>
 </ul>
 </div>
 
