--- a/slides/EDUC641_17_critiques.html
+++ b/slides/EDUC641_17_critiques.html
@@ -255,7 +255,7 @@ Never **EVER** use Excel to read in your data
 More importantly, without being able to observe researcher decisions in their code, we can't assess the reasonableness of choices and the potential for replication. .red-pink[**We need to learn how to code and not just point-and-click for Open Science.**]
 
 --
-Developing a consistent, reproducible [data management workflow](./data_management.html) is key
+Developing a consistent, reproducible [data management workflow](../data_management.html) is key
 
 ---
 class: middle, inverse
@@ -420,8 +420,8 @@ bayes &lt;- stan_glm(life_expectancy ~ schooling, data = who,
 #&gt; 
 #&gt; SAMPLING FOR MODEL 'continuous' NOW (CHAIN 1).
 #&gt; Chain 1: 
-#&gt; Chain 1: Gradient evaluation took 0 seconds
-#&gt; Chain 1: 1000 transitions using 10 leapfrog steps per transition would take 0 seconds.
+#&gt; Chain 1: Gradient evaluation took 0.001 seconds
+#&gt; Chain 1: 1000 transitions using 10 leapfrog steps per transition would take 10 seconds.
 #&gt; Chain 1: Adjust your expectations accordingly!
 #&gt; Chain 1: 
 #&gt; Chain 1: 
@@ -438,9 +438,9 @@ bayes &lt;- stan_glm(life_expectancy ~ schooling, data = who,
 #&gt; Chain 1: Iteration: 1800 / 2000 [ 90%]  (Sampling)
 #&gt; Chain 1: Iteration: 2000 / 2000 [100%]  (Sampling)
 #&gt; Chain 1: 
-#&gt; Chain 1:  Elapsed Time: 0.055 seconds (Warm-up)
-#&gt; Chain 1:                0.055 seconds (Sampling)
-#&gt; Chain 1:                0.11 seconds (Total)
+#&gt; Chain 1:  Elapsed Time: 0.058 seconds (Warm-up)
+#&gt; Chain 1:                0.056 seconds (Sampling)
+#&gt; Chain 1:                0.114 seconds (Total)
 #&gt; Chain 1: 
 #&gt; 
 #&gt; SAMPLING FOR MODEL 'continuous' NOW (CHAIN 2).
@@ -463,15 +463,15 @@ bayes &lt;- stan_glm(life_expectancy ~ schooling, data = who,
 #&gt; Chain 2: Iteration: 1800 / 2000 [ 90%]  (Sampling)
 #&gt; Chain 2: Iteration: 2000 / 2000 [100%]  (Sampling)
 #&gt; Chain 2: 
-#&gt; Chain 2:  Elapsed Time: 0.04 seconds (Warm-up)
-#&gt; Chain 2:                0.05 seconds (Sampling)
-#&gt; Chain 2:                0.09 seconds (Total)
+#&gt; Chain 2:  Elapsed Time: 0.039 seconds (Warm-up)
+#&gt; Chain 2:                0.055 seconds (Sampling)
+#&gt; Chain 2:                0.094 seconds (Total)
 #&gt; Chain 2: 
 #&gt; 
 #&gt; SAMPLING FOR MODEL 'continuous' NOW (CHAIN 3).
 #&gt; Chain 3: 
-#&gt; Chain 3: Gradient evaluation took 0 seconds
-#&gt; Chain 3: 1000 transitions using 10 leapfrog steps per transition would take 0 seconds.
+#&gt; Chain 3: Gradient evaluation took 0.001 seconds
+#&gt; Chain 3: 1000 transitions using 10 leapfrog steps per transition would take 10 seconds.
 #&gt; Chain 3: Adjust your expectations accordingly!
 #&gt; Chain 3: 
 #&gt; Chain 3: 
@@ -488,9 +488,9 @@ bayes &lt;- stan_glm(life_expectancy ~ schooling, data = who,
 #&gt; Chain 3: Iteration: 1800 / 2000 [ 90%]  (Sampling)
 #&gt; Chain 3: Iteration: 2000 / 2000 [100%]  (Sampling)
 #&gt; Chain 3: 
-#&gt; Chain 3:  Elapsed Time: 0.045 seconds (Warm-up)
-#&gt; Chain 3:                0.04 seconds (Sampling)
-#&gt; Chain 3:                0.085 seconds (Total)
+#&gt; Chain 3:  Elapsed Time: 0.053 seconds (Warm-up)
+#&gt; Chain 3:                0.05 seconds (Sampling)
+#&gt; Chain 3:                0.103 seconds (Total)
 #&gt; Chain 3: 
 #&gt; 
 #&gt; SAMPLING FOR MODEL 'continuous' NOW (CHAIN 4).
@@ -513,9 +513,9 @@ bayes &lt;- stan_glm(life_expectancy ~ schooling, data = who,
 #&gt; Chain 4: Iteration: 1800 / 2000 [ 90%]  (Sampling)
 #&gt; Chain 4: Iteration: 2000 / 2000 [100%]  (Sampling)
 #&gt; Chain 4: 
-#&gt; Chain 4:  Elapsed Time: 0.04 seconds (Warm-up)
-#&gt; Chain 4:                0.05 seconds (Sampling)
-#&gt; Chain 4:                0.09 seconds (Total)
+#&gt; Chain 4:  Elapsed Time: 0.046 seconds (Warm-up)
+#&gt; Chain 4:                0.054 seconds (Sampling)
+#&gt; Chain 4:                0.1 seconds (Total)
 #&gt; Chain 4:
 ```
 ---
