--- a/slides/EDUC641_17_critiques.html
+++ b/slides/EDUC641_17_critiques.html
@@ -347,6 +347,7 @@ How believable are the following findings?
 - People who wear glasses are more likely to be empathetic `\((p = 0.023)\)`
 - Medical doctors have fewer close relationships than those in other professions `\((p = 0.007)\)`
 - People who engage in [power posing](https://www.nytimes.com/2017/10/18/magazine/when-the-revolution-came-for-amy-cuddy.html) experience increased testosterone `\((p = 0.045)\)` (*a real paper*)
+- Asking insurance customers to sign an [honesty pledge](https://www.nytimes.com/2023/06/24/business/economy/francesca-gino-harvard-dishonesty.html) at the beginning (compared to the end) of a policy review form led to more truthful reporting of driving habits `\((p&lt;0.001)\)` (*a real, very contested paper*)
 
 
 --
@@ -420,8 +421,8 @@ bayes &lt;- stan_glm(life_expectancy ~ schooling, data = who,
 #&gt; 
 #&gt; SAMPLING FOR MODEL 'continuous' NOW (CHAIN 1).
 #&gt; Chain 1: 
-#&gt; Chain 1: Gradient evaluation took 0.001 seconds
-#&gt; Chain 1: 1000 transitions using 10 leapfrog steps per transition would take 10 seconds.
+#&gt; Chain 1: Gradient evaluation took 0 seconds
+#&gt; Chain 1: 1000 transitions using 10 leapfrog steps per transition would take 0 seconds.
 #&gt; Chain 1: Adjust your expectations accordingly!
 #&gt; Chain 1: 
 #&gt; Chain 1: 
@@ -438,9 +439,9 @@ bayes &lt;- stan_glm(life_expectancy ~ schooling, data = who,
 #&gt; Chain 1: Iteration: 1800 / 2000 [ 90%]  (Sampling)
 #&gt; Chain 1: Iteration: 2000 / 2000 [100%]  (Sampling)
 #&gt; Chain 1: 
-#&gt; Chain 1:  Elapsed Time: 0.058 seconds (Warm-up)
-#&gt; Chain 1:                0.056 seconds (Sampling)
-#&gt; Chain 1:                0.114 seconds (Total)
+#&gt; Chain 1:  Elapsed Time: 0.061 seconds (Warm-up)
+#&gt; Chain 1:                0.057 seconds (Sampling)
+#&gt; Chain 1:                0.118 seconds (Total)
 #&gt; Chain 1: 
 #&gt; 
 #&gt; SAMPLING FOR MODEL 'continuous' NOW (CHAIN 2).
@@ -464,14 +465,14 @@ bayes &lt;- stan_glm(life_expectancy ~ schooling, data = who,
 #&gt; Chain 2: Iteration: 2000 / 2000 [100%]  (Sampling)
 #&gt; Chain 2: 
 #&gt; Chain 2:  Elapsed Time: 0.039 seconds (Warm-up)
-#&gt; Chain 2:                0.055 seconds (Sampling)
-#&gt; Chain 2:                0.094 seconds (Total)
+#&gt; Chain 2:                0.046 seconds (Sampling)
+#&gt; Chain 2:                0.085 seconds (Total)
 #&gt; Chain 2: 
 #&gt; 
 #&gt; SAMPLING FOR MODEL 'continuous' NOW (CHAIN 3).
 #&gt; Chain 3: 
-#&gt; Chain 3: Gradient evaluation took 0.001 seconds
-#&gt; Chain 3: 1000 transitions using 10 leapfrog steps per transition would take 10 seconds.
+#&gt; Chain 3: Gradient evaluation took 0 seconds
+#&gt; Chain 3: 1000 transitions using 10 leapfrog steps per transition would take 0 seconds.
 #&gt; Chain 3: Adjust your expectations accordingly!
 #&gt; Chain 3: 
 #&gt; Chain 3: 
@@ -488,9 +489,9 @@ bayes &lt;- stan_glm(life_expectancy ~ schooling, data = who,
 #&gt; Chain 3: Iteration: 1800 / 2000 [ 90%]  (Sampling)
 #&gt; Chain 3: Iteration: 2000 / 2000 [100%]  (Sampling)
 #&gt; Chain 3: 
-#&gt; Chain 3:  Elapsed Time: 0.053 seconds (Warm-up)
-#&gt; Chain 3:                0.05 seconds (Sampling)
-#&gt; Chain 3:                0.103 seconds (Total)
+#&gt; Chain 3:  Elapsed Time: 0.042 seconds (Warm-up)
+#&gt; Chain 3:                0.048 seconds (Sampling)
+#&gt; Chain 3:                0.09 seconds (Total)
 #&gt; Chain 3: 
 #&gt; 
 #&gt; SAMPLING FOR MODEL 'continuous' NOW (CHAIN 4).
@@ -513,9 +514,9 @@ bayes &lt;- stan_glm(life_expectancy ~ schooling, data = who,
 #&gt; Chain 4: Iteration: 1800 / 2000 [ 90%]  (Sampling)
 #&gt; Chain 4: Iteration: 2000 / 2000 [100%]  (Sampling)
 #&gt; Chain 4: 
-#&gt; Chain 4:  Elapsed Time: 0.046 seconds (Warm-up)
-#&gt; Chain 4:                0.054 seconds (Sampling)
-#&gt; Chain 4:                0.1 seconds (Total)
+#&gt; Chain 4:  Elapsed Time: 0.042 seconds (Warm-up)
+#&gt; Chain 4:                0.05 seconds (Sampling)
+#&gt; Chain 4:                0.092 seconds (Total)
 #&gt; Chain 4:
 ```
 ---
