post assignment 4 key

--- a/assignments.html
+++ b/assignments.html
@@ -1186,8 +1186,8 @@ estimation</p></li>
 <p>Deadline: November 27, 11:59pm</p>
 <p>Download: <a href="./assignments/assignment04.html">html file</a> |
 <a href="./data/cont.csv">cont.csv dataset</a></p>
-<p>Key:
-<!-- [doc file](./assignments/keys/assignment04_key.docx); [R script](./assignments/keys/assignment04_key.R) --></p>
+<p>Key: <a href="./assignments/keys/assignment04_key.docx">doc file</a>;
+<a href="./assignments/keys/assignment04_key.R">R script</a></p>
 </div>
 <div id="final" class="section level2">
 <h2>3.5. Final</h2>
