--- a/assignments.html
+++ b/assignments.html
@@ -1130,8 +1130,8 @@ in the above html/doc/pdf.</li>
 <p>Deadline: October 9, 11:59pm</p>
 <p>Download: <a href="./assignments/assignment01.html">html file</a> |
 <a href="./data/cat.csv">cat.csv dataset</a></p>
-<p>Key: <a href="./assignments/keys/assignment01_key.docx">doc file</a>;
-<a href="./assignments/keys/assignment01_key.R">R script</a></p>
+<p>Key:
+<!-- [doc file](./assignments/keys/assignment01_key.docx); [R script](./assignments/keys/assignment01_key.R) --></p>
 </div>
 <div id="assignment-2" class="section level2">
 <h2>3.2. Assignment 2</h2>
@@ -1151,8 +1151,8 @@ and a statistical inference from a chi-squared statistic</p></li>
 <p>Deadline: October 20, 11:59pm</p>
 <p>Download: <a href="./assignments/assignment02.html">html file</a> |
 <a href="./data/cat.csv">cat.csv dataset</a></p>
-<p>Key: <a href="./assignments/keys/assignment02_key.docx">doc file</a>;
-<a href="./assignments/keys/assignment02_key.R">R script</a></p>
+<p>Key:
+<!-- [doc file](./assignments/keys/assignment02_key.docx); [R script](./assignments/keys/assignment02_key.R) --></p>
 </div>
 <div id="assignment-3" class="section level2">
 <h2>3.3. Assignment 3</h2>
@@ -1168,8 +1168,8 @@ class="math inline">\(t\)</span>-test</p></li>
 <p>Deadline: November 9, 11:59pm</p>
 <p>Download: <a href="./assignments/assignment03.html">html file</a> |
 <a href="./data/cont.csv">cont.csv dataset</a></p>
-<p>Key: <a href="./assignments/keys/assignment03_key.docx">doc file</a>;
-<a href="./assignments/keys/assignment03_key.R">R script</a></p>
+<p>Key:
+<!-- [doc file](./assignments/keys/assignment03_key.docx); [R script](./assignments/keys/assignment03_key.R) --></p>
 </div>
 <div id="assignment-4" class="section level2">
 <h2>3.4. Assignment 4</h2>
@@ -1186,8 +1186,8 @@ estimation</p></li>
 <p>Deadline: November 27, 11:59pm</p>
 <p>Download: <a href="./assignments/assignment04.html">html file</a> |
 <a href="./data/cont.csv">cont.csv dataset</a></p>
-<p>Key: <a href="./assignments/keys/assignment04_key.docx">doc file</a>;
-<a href="./assignments/keys/assignment04_key.R">R script</a></p>
+<p>Key:
+<!-- [doc file](./assignments/keys/assignment04_key.docx); [R script](./assignments/keys/assignment04_key.R) --></p>
 </div>
 <div id="final" class="section level2">
 <h2>3.5. Final</h2>
