--- a/assignments.html
+++ b/assignments.html
@@ -938,29 +938,29 @@ Lectures
 </button>
 <div class="nav-dropdown-content">
 <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
-<a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
-<a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
-<a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
-<a href="./slides/EDUC641_4_categrel.html#46">5. Categorical relationships II</a>
-<a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
-<a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
-<a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
-<a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
-<a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
-<a href="./slides/EDUC641_10_inference.html">11. CLT</a>
-<a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
-<a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
-<a href="./slides/EDUC641_14_regression.html">14. Bivariate regression I</a>
-<a href="./slides/EDUC641_15_regression2.html">15. Bivariate regression II</a>
-<a href="./slides/EDUC641_15_regression2.html">16. Bivariate regression III</a>
-<a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
-<a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
+<span class="nav-dropdown-header">2. Measurement</span>
+<span class="nav-dropdown-header">3. Categorical descriptives</span>
+<span class="nav-dropdown-header">4. Categorical relationships I</span>
+<span class="nav-dropdown-header">5. Categorical relationships II</span>
+<span class="nav-dropdown-header">6. Troubling history of stats</span>
+<span class="nav-dropdown-header">7. Continuous descriptives I</span>
+<span class="nav-dropdown-header">8. Continuous descriptives II</span>
+<span class="nav-dropdown-header">9. Transformations and z-scores</span>
+<span class="nav-dropdown-header">10. Normal distributions</span>
+<span class="nav-dropdown-header">11. CLT</span>
+<span class="nav-dropdown-header">12. Z- and t-tests</span>
+<span class="nav-dropdown-header">13. Continuous relationships</span>
+<span class="nav-dropdown-header">14. Bivariate regression I</span>
+<span class="nav-dropdown-header">15. Bivariate regression II</span>
+<span class="nav-dropdown-header">16. Bivariate regression III</span>
+<span class="nav-dropdown-header">17. NHST critiques</span>
+<span class="nav-dropdown-header">18. NHST critiques and summary</span>
 </div>
 </div>
 </div>
 <div class="nav-right">
 <a href="assignments.html">Assignments</a>
-<a href="https://github.com/DavidDLiebowitz/EDUC641_23F">
+<a href="https://github.com/DavidDLiebowitz/EDUC641_24F">
 <i class="fa fa-github" aria-hidden="true"></i>
 </a>
 <a href="javascript:void(0);" class="nav-toggle">&#9776;</a>
@@ -999,57 +999,23 @@ Lectures
     <li>
       <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
     </li>
-    <li>
-      <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_4_categrel.html#46">5. Categorical relationships II</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_10_inference.html">11. CLT</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_14_regression.html">14. Bivariate regression I</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_15_regression2.html">15. Bivariate regression II</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_15_regression2.html">16. Bivariate regression III</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
-    </li>
+    <li class="dropdown-header">2. Measurement</li>
+    <li class="dropdown-header">3. Categorical descriptives</li>
+    <li class="dropdown-header">4. Categorical relationships I</li>
+    <li class="dropdown-header">5. Categorical relationships II</li>
+    <li class="dropdown-header">6. Troubling history of stats</li>
+    <li class="dropdown-header">7. Continuous descriptives I</li>
+    <li class="dropdown-header">8. Continuous descriptives II</li>
+    <li class="dropdown-header">9. Transformations and z-scores</li>
+    <li class="dropdown-header">10. Normal distributions</li>
+    <li class="dropdown-header">11. CLT</li>
+    <li class="dropdown-header">12. Z- and t-tests</li>
+    <li class="dropdown-header">13. Continuous relationships</li>
+    <li class="dropdown-header">14. Bivariate regression I</li>
+    <li class="dropdown-header">15. Bivariate regression II</li>
+    <li class="dropdown-header">16. Bivariate regression III</li>
+    <li class="dropdown-header">17. NHST critiques</li>
+    <li class="dropdown-header">18. NHST critiques and summary</li>
   </ul>
 </li>
       </ul>
@@ -1058,7 +1024,7 @@ Lectures
   <a href="assignments.html">Assignments</a>
 </li>
 <li>
-  <a href="https://github.com/DavidDLiebowitz/EDUC641_23F">
+  <a href="https://github.com/DavidDLiebowitz/EDUC641_24F">
     <span class="fa fa-github"></span>
      
   </a>
@@ -1127,11 +1093,11 @@ in the above html/doc/pdf.</li>
 <li><p>Describe and summarize categorical data</p></li>
 <li><p>Create visualizations of categorical data</p></li>
 </ul>
-<p>Deadline: October 9, 11:59pm</p>
-<p>Download: <a href="./assignments/assignment01.html">html file</a> |
-<a href="./data/cat.csv">cat.csv dataset</a></p>
-<p>Key:
-<!-- [doc file](./assignments/keys/assignment01_key.docx); [R script](./assignments/keys/assignment01_key.R) --></p>
+<p>Deadline: October 14, 11:59pm</p>
+<!-- Download: [html file](./assignments/assignment01.html) | [cat.csv dataset](./data/cat.csv)
+
+Key: 
+ [doc file](./assignments/keys/assignment01_key.docx); [R script](./assignments/keys/assignment01_key.R) -->
 </div>
 <div id="assignment-2" class="section level2">
 <h2>3.2. Assignment 2</h2>
@@ -1148,11 +1114,11 @@ inference from a sample to a population</p></li>
 <li><p>Interpret and report the results of a contingency-table analysis
 and a statistical inference from a chi-squared statistic</p></li>
 </ul>
-<p>Deadline: October 20, 11:59pm</p>
-<p>Download: <a href="./assignments/assignment02.html">html file</a> |
-<a href="./data/cat.csv">cat.csv dataset</a></p>
-<p>Key:
-<!-- [doc file](./assignments/keys/assignment02_key.docx); [R script](./assignments/keys/assignment02_key.R) --></p>
+<p>Deadline: October 25, 11:59pm</p>
+<!-- Download: [html file](./assignments/assignment02.html) | [cat.csv dataset](./data/cat.csv)
+
+Key: 
+ [doc file](./assignments/keys/assignment02_key.docx); [R script](./assignments/keys/assignment02_key.R) -->
 </div>
 <div id="assignment-3" class="section level2">
 <h2>3.3. Assignment 3</h2>
@@ -1165,11 +1131,11 @@ class="math inline">\(t\)</span>-tests</p>
 <li><p>Conduct and interpret a one-sample <span
 class="math inline">\(t\)</span>-test</p></li>
 </ul>
-<p>Deadline: November 9, 11:59pm</p>
-<p>Download: <a href="./assignments/assignment03.html">html file</a> |
-<a href="./data/cont.csv">cont.csv dataset</a></p>
-<p>Key:
-<!-- [doc file](./assignments/keys/assignment03_key.docx); [R script](./assignments/keys/assignment03_key.R) --></p>
+<p>Deadline: November 7, 11:59pm</p>
+<!-- Download: [html file](./assignments/assignment03.html) | [cont.csv dataset](./data/cont.csv)
+
+Key: 
+ [doc file](./assignments/keys/assignment03_key.docx); [R script](./assignments/keys/assignment03_key.R) -->
 </div>
 <div id="assignment-4" class="section level2">
 <h2>3.4. Assignment 4</h2>
@@ -1183,20 +1149,26 @@ test of bivariate continuous relationship</p></li>
 <li><p>Test (some) assumptions of bivariate regression
 estimation</p></li>
 </ul>
-<p>Deadline: November 27, 11:59pm</p>
-<p>Download: <a href="./assignments/assignment04.html">html file</a> |
-<a href="./data/cont.csv">cont.csv dataset</a></p>
-<p>Key:
-<!-- [doc file](./assignments/keys/assignment04_key.docx); [R script](./assignments/keys/assignment04_key.R) --></p>
+<p>Deadline: December 2, 11:59pm</p>
+<!-- Download: [html file](./assignments/assignment04.html) | [cont.csv dataset](./data/cont.csv)
+
+Key: 
+ [doc file](./assignments/keys/assignment04_key.docx); [R script](./assignments/keys/assignment04_key.R) -->
 </div>
 <div id="final" class="section level2">
 <h2>3.5. Final</h2>
 <p>Final assignment</p>
-<p>Deadline: December 6, 11:59pm</p>
-<p>Download: <a href="./assignments/assignment05.html">html file</a> |
-<a href="./data/ah01.csv">ah01.csv dataset</a>; <a
-href="./data/ah02.csv">ah02.csv dataset</a></p>
-<p>Key:</p>
+<p>Deadline: December 11, 4:59pm</p>
+<!-- 
+Download: 
+[html file](./assignments/assignment05.html) | [ah01.csv dataset](./data/ah01.csv); [ah02.csv dataset](./data/ah02.csv) 
+
+Key:
+
+-->
+<blockquote>
+
+</blockquote>
 </div>
 </div>
 
