first class launch

--- a/assignments.html
+++ b/assignments.html
@@ -1094,8 +1094,9 @@ in the above html/doc/pdf.</li>
 <li><p>Create visualizations of categorical data</p></li>
 </ul>
 <p>Deadline: October 14, 11:59pm</p>
-<!-- Download: [html file](./assignments/assignment01.html) | [cat.csv dataset](./data/cat.csv)
-
+<p>Download: <a href="./assignments/assignment01.html">html file</a> |
+<a href="./data/cat.csv">cat.csv dataset</a></p>
+<!--
 Key: 
  [doc file](./assignments/keys/assignment01_key.docx); [R script](./assignments/keys/assignment01_key.R) -->
 </div>
