--- a/schedule.html
+++ b/schedule.html
@@ -1074,10 +1074,8 @@ href="./assignments/Light%20Singer%20Willett%201990.pdf">Light, Singer
 <ul>
 <li>Class 1 (9/26) slides: <a
 href="./slides/EDUC641_1_intro.html">html</a> | <a
-href="./slides/EDUC641_1_intro.pdf">pdf</a></li>
-<li>Class 2 (9/28) slides: <a
-href="./slides/EDUC641_2_measures.html">html</a> | <a
-href="./slides/EDUC641_2_measures.pdf">pdf</a></li>
+href="./slides/EDUC641_1_intro.pdf">pdf</a>
+<!-- - Class 2 (9/28) slides: [html](./slides/EDUC641_2_measures.html) | [pdf](./slides/EDUC641_2_measures.pdf) --></li>
 <li>R Tutorial slides: <a href="./slides/tutorial.html">html</a></li>
 </ul>
 <p>Labs:</p>
@@ -1254,14 +1252,15 @@ bivariate regression model</li>
 </ul>
 <p>Readings:</p>
 <ul>
-<li>Complete <strong>prior to Nov. 20</strong>: <a
+<li><p>Complete <strong>prior to Nov. 21</strong> class: <a
 href="https://learningstatisticswithr.com/lsr-0.6.pdf">LSWR Chapter 15.1
-and 15.2</a></li>
+and 15.2</a></p></li>
+<li><p><strong>No class on 11/26 and 11/28 (University
+holiday)</strong></p></li>
 </ul>
 <p>Lecture slides:</p>
 <!--
 - Class 13 (11/7) slides: [html](./slides/EDUC641_13_continuousrel.html) | [pdf](./slides/EDUC641_13_continuousrel.pdf)
-  + **No class on 11/9 (David traveling for conference)**
 - Class 14 (11/14) slides: [html](./slides/EDUC641_14_regression.html) | [pdf](./slides/EDUC641_14_regression.pdf)
 - Class 15-16 slides (11/16 & 11/21): [html](./slides/EDUC641_15_regression2.html) | [pdf](./slides/EDUC641_15_regression2.pdf) 
   + **No class on 11/23 (university holiday)**
