fix broken link

--- a/syllabus.html
+++ b/syllabus.html
@@ -1107,10 +1107,10 @@ generalizability of quantitative research</li>
 <div id="textbook" class="section level2">
 <h2>Textbook</h2>
 <p>We will primarily be referring to chapters in <a
-href="https://learningstatisticswithr-bookdown.netlify.com/index.html">Learning
-Statistics with R</a> (<strong>LSWR</strong>) by Danielle Navarro. This
-textbook is available for free online. You may choose to purchase a
-paper copy if you wish, but it is not required.</p>
+href="https://learningstatisticswithr.com/">Learning Statistics with
+R</a> (<strong>LSWR</strong>) by Danielle Navarro. This textbook is
+available for free online. You may choose to purchase a paper copy if
+you wish, but it is not required.</p>
 <p>There are additional readings assignments on the troubling historical
 origins of modern statistics that appear in the detailed <a
 href="./schedule.html">schedule</a>.</p>
