--- a/schedule.html
+++ b/schedule.html
@@ -938,7 +938,7 @@ Lectures
 </button>
 <div class="nav-dropdown-content">
 <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
-<span class="nav-dropdown-header">2. Measurement</span>
+<a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
 <span class="nav-dropdown-header">3. Categorical descriptives</span>
 <span class="nav-dropdown-header">4. Categorical relationships I</span>
 <span class="nav-dropdown-header">5. Categorical relationships II</span>
@@ -999,7 +999,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
     </li>
-    <li class="dropdown-header">2. Measurement</li>
+    <li>
+      <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
+    </li>
     <li class="dropdown-header">3. Categorical descriptives</li>
     <li class="dropdown-header">4. Categorical relationships I</li>
     <li class="dropdown-header">5. Categorical relationships II</li>
@@ -1074,8 +1076,10 @@ href="./assignments/Light%20Singer%20Willett%201990.pdf">Light, Singer
 <ul>
 <li>Class 1 (10/2) slides: <a
 href="./slides/EDUC641_1_intro.html">html</a> | <a
-href="./slides/EDUC641_1_intro.pdf">pdf</a>
-<!-- - Class 2 (9/28) slides: [html](./slides/EDUC641_2_measures.html) | [pdf](./slides/EDUC641_2_measures.pdf) --></li>
+href="./slides/EDUC641_1_intro.pdf">pdf</a></li>
+<li>Class 2 (9/28) slides: <a
+href="./slides/EDUC641_2_measures.html">html</a> | <a
+href="./slides/EDUC641_2_measures.pdf">pdf</a></li>
 <li>R Tutorial slides: <a href="./slides/tutorial.html">html</a></li>
 </ul>
 <p>Labs:</p>
