--- a/slides/EDUC641_2_measures.html
+++ b/slides/EDUC641_2_measures.html
@@ -223,37 +223,37 @@ Is there a mean (or standard deviation) for the hair color of the students in th
 ]
 
 .pull-right[
-&lt;img src="retract.jpg" style="display: block; margin: auto;" /&gt;
+&lt;img src="retract.jpg" width="961" style="display: block; margin: auto;" /&gt;
 ]
 
 ---
 # The measure of our class
-&lt;img src="measure1.JPG" style="display: block; margin: auto;" /&gt;
+&lt;img src="measure1.JPG" width="1707" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
-&lt;img src="measure2.JPG" style="display: block; margin: auto;" /&gt;
+&lt;img src="measure2.JPG" width="1707" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
-&lt;img src="measure3.JPG" style="display: block; margin: auto;" /&gt;
+&lt;img src="measure3.JPG" width="1707" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
-&lt;img src="measure4.JPG" style="display: block; margin: auto;" /&gt;
+&lt;img src="measure4.JPG" width="1707" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
-&lt;img src="measure5.JPG" style="display: block; margin: auto;" /&gt;
+&lt;img src="measure5.JPG" width="1707" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
-&lt;img src="measure6.JPG" style="display: block; margin: auto;" /&gt;
+&lt;img src="measure6.JPG" width="1707" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
 
-Qualtrics: [https://oregon.qualtrics.com/jfe/form/SV_eJ8vRcuLXwXnbsG](https://oregon.qualtrics.com/jfe/form/SV_eJ8vRcuLXwXnbsG)
+Qualtrics: [https://oregon.qualtrics.com/jfe/form/SV_9GJ7FP4F6iMRPiC](https://oregon.qualtrics.com/jfe/form/SV_9GJ7FP4F6iMRPiC)
 
 or
 
@@ -277,7 +277,7 @@ class: middle, inverse
 ---
 # Measure reliability &amp; validity
 
-&lt;img src="lo_rely.jpg" style="display: block; margin: auto;" /&gt;
+&lt;img src="lo_rely.jpg" width="1529" style="display: block; margin: auto;" /&gt;
 
 --
 .blue[**What kind of validity (discussed in LSWR) are we referencing here?**]
@@ -285,7 +285,7 @@ class: middle, inverse
 ---
 # Measure reliability &amp; validity
 
-&lt;img src="hi_rely.jpg" style="display: block; margin: auto;" /&gt;
+&lt;img src="hi_rely.jpg" width="1529" style="display: block; margin: auto;" /&gt;
 
 --
 More on this in EDUC 645, and much more on this in EDLD 663 (*Measurement &amp; Assessment*) and EDLD 661/2 (*Item Response Theory*)!
