add Havi office hour sign up

--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@ Lectures
 <div class="nav-dropdown-content">
 <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
 <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
-<span class="nav-dropdown-header">3. Categorical descriptives</span>
+<a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
 <span class="nav-dropdown-header">4. Categorical relationships I</span>
 <span class="nav-dropdown-header">5. Categorical relationships II</span>
 <span class="nav-dropdown-header">6. Troubling history of stats</span>
@@ -1003,7 +1003,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
     </li>
-    <li class="dropdown-header">3. Categorical descriptives</li>
+    <li>
+      <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
+    </li>
     <li class="dropdown-header">4. Categorical relationships I</li>
     <li class="dropdown-header">5. Categorical relationships II</li>
     <li class="dropdown-header">6. Troubling history of stats</li>
@@ -1083,7 +1085,8 @@ analysis by <strong>doing</strong> statistical analysis. <em>This course
 <li>David D. Liebowitz (office hours: Thursdays, 2 - 3:30 Lokey 102S or
 <a href="https://uoregon.zoom.us/j/6336067468">Zoom</a>)</li>
 <li>Brittany Spinner</li>
-<li>Havisha Khurana</li>
+<li>Havisha Khurana (office hour <a
+href="https://outlook.office365.com/book/educ641_officehour_havi@uoregon.edu/">signup</a>)</li>
 </ul>
 </div>
 
