--- a/schedule.html
+++ b/schedule.html
@@ -940,8 +940,8 @@ Lectures
 <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
 <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
 <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
-<span class="nav-dropdown-header">4. Categorical relationships I</span>
-<span class="nav-dropdown-header">5. Categorical relationships II</span>
+<a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
+<a href="./slides/EDUC641_4_categrel.html#46">5. Categorical relationships II</a>
 <span class="nav-dropdown-header">6. Troubling history of stats</span>
 <span class="nav-dropdown-header">7. Continuous descriptives I</span>
 <span class="nav-dropdown-header">8. Continuous descriptives II</span>
@@ -1005,8 +1005,12 @@ Lectures
     <li>
       <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
     </li>
-    <li class="dropdown-header">4. Categorical relationships I</li>
-    <li class="dropdown-header">5. Categorical relationships II</li>
+    <li>
+      <a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_4_categrel.html#46">5. Categorical relationships II</a>
+    </li>
     <li class="dropdown-header">6. Troubling history of stats</li>
     <li class="dropdown-header">7. Continuous descriptives I</li>
     <li class="dropdown-header">8. Continuous descriptives II</li>
@@ -1118,8 +1122,8 @@ href="./slides/EDUC641_3_categdescr.html">html</a> | <a
 href="./slides/EDUC641_3_categdescr.pdf">pdf</a></li>
 <li>Data: <a href="./data/deathpenalty.csv">deathpenalty.csv</a> | <a
 href="./data/deathpenalty_codebook.pdf">codebook</a></li>
-<li>R code: <a href="./slides/EDUC641_3_code.R">R script</a>
-<!-- - Lab activities: [doc](./labs/Lab2.docx) --></li>
+<li>R code: <a href="./slides/EDUC641_3_code.R">R script</a></li>
+<li>Lab activities: <a href="./labs/Lab2.docx">doc</a></li>
 </ul>
 <p>Assignment 1:</p>
 <ul>
