--- a/slides/EDUC641_4_categrel.html
+++ b/slides/EDUC641_4_categrel.html
@@ -52,9 +52,11 @@ class: center, middle, inverse, title-slide
 ---
 # Materials
 
-### 1. Death penalty data (in file called deathpenalty.csv)
-### 2. Codebook describing the contents of said data
-### 3. R script to conduct the data analytic tasks of the unit
+.large[
+1. Death penalty data (in file called deathpenalty.csv)
+2. Codebook describing the contents of said data
+3. R script to conduct the data analytic tasks of the unit
+]
 
 ---
 # What we've done
@@ -778,7 +780,7 @@ class: middle, inverse
 
 ### Assignments
 - Quiz on Units 1 &amp; 2 on Oct. 17
-- Assignment #2 Due October 20, 11:59pm
+- Assignment #2 Due October 25, 11:59pm
 
 
     </textarea>
