--- a/assignments.html
+++ b/assignments.html
@@ -939,9 +939,9 @@ Lectures
 <div class="nav-dropdown-content">
 <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
 <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
-<span class="nav-dropdown-header">3. Categorical descriptives</span>
-<span class="nav-dropdown-header">4. Categorical relationships I</span>
-<span class="nav-dropdown-header">5. Categorical relationships II</span>
+<a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
+<a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
+<a href="./slides/EDUC641_4_categrel.html#46">5. Categorical relationships II</a>
 <span class="nav-dropdown-header">6. Troubling history of stats</span>
 <span class="nav-dropdown-header">7. Continuous descriptives I</span>
 <span class="nav-dropdown-header">8. Continuous descriptives II</span>
@@ -1002,9 +1002,15 @@ Lectures
     <li>
       <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
     </li>
-    <li class="dropdown-header">3. Categorical descriptives</li>
-    <li class="dropdown-header">4. Categorical relationships I</li>
-    <li class="dropdown-header">5. Categorical relationships II</li>
+    <li>
+      <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_4_categrel.html#46">5. Categorical relationships II</a>
+    </li>
     <li class="dropdown-header">6. Troubling history of stats</li>
     <li class="dropdown-header">7. Continuous descriptives I</li>
     <li class="dropdown-header">8. Continuous descriptives II</li>
