--- a/schedule.html
+++ b/schedule.html
@@ -1162,21 +1162,22 @@ href="https://nautil.us/how-eugenics-shaped-statistics-238014">Clayton
 </ul></li>
 </ul>
 <p>Lectures:</p>
-<!--
-- Classes 4-5 (10/5 and 10/10) slides: [html](./slides/EDUC641_4_categrel.html) | [pdf](./slides/EDUC641_4_categrel.pdf)
-- Class 6 (10/12) slides: [html](./slides/EDUC641_6_history.html) | [pdf](./slides/EDUC641_6_history.pdf)
-- Data: [deathpenalty.csv](./data/deathpenalty.csv) | [codebook](./data/deathpenalty_codebook.pdf) 
-- R code: [R script](./slides/EDUC641_4_code.R)
-- Lab activities: [Week 3 Lab](./labs/Lab3.docx) | [Week 4 Lab](./labs/Lab4.docx)
--->
+<ul>
+<li>Classes 4-5 (10/10 and 10/15) slides: <a
+href="./slides/EDUC641_4_categrel.html">html</a> | <a
+href="./slides/EDUC641_4_categrel.pdf">pdf</a> <!--
+- Class 6 (10/12) slides: [html](./slides/EDUC641_6_history.html) | [pdf](./slides/EDUC641_6_history.pdf) --></li>
+<li>Data: <a href="./data/deathpenalty.csv">deathpenalty.csv</a> | <a
+href="./data/deathpenalty_codebook.pdf">codebook</a></li>
+<li>R code: <a href="./slides/EDUC641_4_code.R">R script</a>
+<!-- - Lab activities: [Week 3 Lab](./labs/Lab3.docx) | [Week 4 Lab](./labs/Lab4.docx) --></li>
+</ul>
 <p>Assignment 2:</p>
 <ul>
-<li>Due: October 25, 11:59pm</li>
+<li><p>Due: October 25, 11:59pm</p></li>
+<li><p><a href="./assignments/assignment02.html">html file</a></p></li>
+<li><p><a href="./data/cat.csv">cat.csv dataset</a></p></li>
 </ul>
-<!--
-- [html file](./assignments/assignment02.html)
-- [cat.csv dataset](./data/cat.csv)
--->
 </div>
 <div id="unit-3" class="section level2">
 <h2>Unit 3</h2>
