--- a/schedule.html
+++ b/schedule.html
@@ -1174,9 +1174,9 @@ href="./data/deathpenalty_codebook.pdf">codebook</a></li>
 </ul>
 <p>Assignment 2:</p>
 <ul>
-<li><p>Due: October 25, 11:59pm</p></li>
-<li><p><a href="./assignments/assignment02.html">html file</a></p></li>
-<li><p><a href="./data/cat.csv">cat.csv dataset</a></p></li>
+<li>Due: October 25, 11:59pm</li>
+<li><a href="./assignments/assignment02.html">html file</a></li>
+<li><a href="./data/cat.csv">cat.csv dataset</a></li>
 </ul>
 </div>
 <div id="unit-3" class="section level2">
