--- a/schedule.html
+++ b/schedule.html
@@ -1169,8 +1169,9 @@ href="./slides/EDUC641_4_categrel.pdf">pdf</a> <!--
 - Class 6 (10/12) slides: [html](./slides/EDUC641_6_history.html) | [pdf](./slides/EDUC641_6_history.pdf) --></li>
 <li>Data: <a href="./data/deathpenalty.csv">deathpenalty.csv</a> | <a
 href="./data/deathpenalty_codebook.pdf">codebook</a></li>
-<li>R code: <a href="./slides/EDUC641_4_code.R">R script</a>
-<!-- - Lab activities: [Week 3 Lab](./labs/Lab3.docx) | [Week 4 Lab](./labs/Lab4.docx) --></li>
+<li>R code: <a href="./slides/EDUC641_4_code.R">R script</a></li>
+<li>Lab activities: <a href="./labs/Lab3.docx">Week 3 Lab</a>
+<!-- | [Week 4 Lab](./labs/Lab4.docx) --></li>
 </ul>
 <p>Assignment 2:</p>
 <ul>
