--- a/schedule.html
+++ b/schedule.html
@@ -942,7 +942,7 @@ Lectures
 <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
 <a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
 <a href="./slides/EDUC641_4_categrel.html#46">5. Categorical relationships II</a>
-<span class="nav-dropdown-header">6. Troubling history of stats</span>
+<a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
 <span class="nav-dropdown-header">7. Continuous descriptives I</span>
 <span class="nav-dropdown-header">8. Continuous descriptives II</span>
 <span class="nav-dropdown-header">9. Transformations and z-scores</span>
@@ -1011,7 +1011,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_4_categrel.html#46">5. Categorical relationships II</a>
     </li>
-    <li class="dropdown-header">6. Troubling history of stats</li>
+    <li>
+      <a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
+    </li>
     <li class="dropdown-header">7. Continuous descriptives I</li>
     <li class="dropdown-header">8. Continuous descriptives II</li>
     <li class="dropdown-header">9. Transformations and z-scores</li>
@@ -1165,8 +1167,10 @@ href="https://nautil.us/how-eugenics-shaped-statistics-238014">Clayton
 <ul>
 <li>Classes 4-5 (10/10 and 10/15) slides: <a
 href="./slides/EDUC641_4_categrel.html">html</a> | <a
-href="./slides/EDUC641_4_categrel.pdf">pdf</a> <!--
-- Class 6 (10/12) slides: [html](./slides/EDUC641_6_history.html) | [pdf](./slides/EDUC641_6_history.pdf) --></li>
+href="./slides/EDUC641_4_categrel.pdf">pdf</a></li>
+<li>Class 6 (10/17) slides: <a
+href="./slides/EDUC641_6_history.html">html</a> | <a
+href="./slides/EDUC641_6_history.pdf">pdf</a></li>
 <li>Data: <a href="./data/deathpenalty.csv">deathpenalty.csv</a> | <a
 href="./data/deathpenalty_codebook.pdf">codebook</a></li>
 <li>R code: <a href="./slides/EDUC641_4_code.R">R script</a></li>
